--- a/src/main/resources/fxml/MainMenu.fxml
+++ b/src/main/resources/fxml/MainMenu.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
@@ -52,7 +53,7 @@
                <font>
                   <Font name="Britannic Bold" size="36.0" />
                </font></Button>
-            <Button fx:id="setupGame" mnemonicParsing="false" onAction="#start" prefHeight="145.0" prefWidth="274.0" styleClass="actionButton" stylesheets="@../css/mainMenu.css" text="PLAY" textFill="WHITE">
+            <Button fx:id="setupGame" mnemonicParsing="false" onMouseClicked="#play" prefHeight="145.0" prefWidth="274.0" styleClass="actionButton" stylesheets="@../css/mainMenu.css" text="PLAY" textFill="WHITE">
                <font>
                   <Font name="Britannic Bold" size="36.0" />
                </font></Button>
@@ -75,6 +76,9 @@
                <font>
                   <Font name="Britannic Bold" size="16.0" />
                </font>
+               <effect>
+                  <DropShadow />
+               </effect>
             </Label>
          </children>
       </Pane>
