--- a/src/main/resources/fxml/mainScene.fxml
+++ b/src/main/resources/fxml/mainScene.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.gui.controllers.MainGuiController">
    <children>
@@ -27,11 +28,11 @@
                      <children>
                         <GridPane fx:id="grid" alignment="CENTER" prefHeight="330.0" prefWidth="330.0" AnchorPane.leftAnchor="69.0" AnchorPane.topAnchor="66.0">
                           <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                           </columnConstraints>
                           <rowConstraints>
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -43,20 +44,60 @@
                         </GridPane>
                         <HBox alignment="CENTER" layoutX="58.0" layoutY="22.0" prefHeight="38.0" prefWidth="352.0" spacing="70.0">
                            <children>
-                              <Label text="0" />
-                              <Label text="1" />
-                              <Label text="2" />
-                              <Label text="3" />
-                              <Label text="4" />
+                              <Label text="0">
+                                      <font>
+                                         <Font name="System Bold" />
+                                      </font>
+                              </Label>
+                              <Label text="1">
+                                 <font>
+                                    <Font name="System Bold" />
+                                 </font>
+                              </Label>
+                              <Label text="2">
+                                 <font>
+                                    <Font name="System Bold" />
+                                 </font>
+                              </Label>
+                              <Label text="3">
+                                 <font>
+                                    <Font name="System Bold" />
+                                 </font>
+                              </Label>
+                              <Label text="4">
+                                 <font>
+                                    <Font name="System Bold" />
+                                 </font>
+                              </Label>
                            </children>
                         </HBox>
                         <VBox alignment="CENTER_LEFT" layoutX="421.0" layoutY="60.0" maxWidth="93.0" prefHeight="348.0" prefWidth="93.0" spacing="50.0">
                            <children>
-                              <Label text="0" />
-                              <Label text="1" />
-                              <Label text="2" />
-                              <Label text="3" />
-                              <Label text="4" />
+                              <Label text="0">
+                                 <font>
+                                    <Font name="System Bold" />
+                                 </font>
+                              </Label>
+                              <Label text="1">
+                                 <font>
+                                    <Font name="System Bold" />
+                                 </font>
+                              </Label>
+                              <Label text="2">
+                                 <font>
+                                    <Font name="System Bold" />
+                                 </font>
+                              </Label>
+                              <Label text="3">
+                                 <font>
+                                    <Font name="System Bold" />
+                                 </font>
+                              </Label>
+                              <Label text="4">
+                                 <font>
+                                    <Font name="System Bold" />
+                                 </font>
+                              </Label>
                            </children>
                         </VBox>
                      </children>
