--- a/src/main/resources/fxml/mainScene.fxml
+++ b/src/main/resources/fxml/mainScene.fxml
@@ -5,13 +5,12 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.gui.controllers.MainGuiController">
+<AnchorPane fx:id="anchor" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.gui.controllers.MainGuiController">
    <children>
-      <StackPane>
+      <StackPane visible="false">
          <children>
-            <ImageView disable="true" fitHeight="457.0" fitWidth="859.0" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER">
+            <ImageView fx:id="image" disable="true" fitHeight="457.0" fitWidth="859.0" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER">
                <image>
                   <Image url="@../graphics/bgs/SantoriniBoard.png" />
                </image>
@@ -24,7 +23,7 @@
             </ImageView>
             <BorderPane>
                <center>
-                  <AnchorPane disable="true" prefWidth="565.0">
+                  <AnchorPane prefWidth="565.0">
                      <children>
                         <GridPane fx:id="grid" alignment="CENTER" prefHeight="330.0" prefWidth="330.0" AnchorPane.leftAnchor="69.0" AnchorPane.topAnchor="66.0">
                           <columnConstraints>
@@ -44,62 +43,29 @@
                         </GridPane>
                         <HBox alignment="CENTER" layoutX="58.0" layoutY="22.0" prefHeight="38.0" prefWidth="352.0" spacing="70.0">
                            <children>
-                              <Label text="0">
-                                      <font>
-                                         <Font name="System Bold" />
-                                      </font>
-                              </Label>
-                              <Label text="1">
-                                 <font>
-                                    <Font name="System Bold" />
-                                 </font>
-                              </Label>
-                              <Label text="2">
-                                 <font>
-                                    <Font name="System Bold" />
-                                 </font>
-                              </Label>
-                              <Label text="3">
-                                 <font>
-                                    <Font name="System Bold" />
-                                 </font>
-                              </Label>
-                              <Label text="4">
-                                 <font>
-                                    <Font name="System Bold" />
-                                 </font>
-                              </Label>
+                              <Label text="0" />
+                              <Label layoutX="172.0" layoutY="21.0" text="1" />
+                              <Label layoutX="221.0" layoutY="21.0" text="2" />
+                              <Label layoutX="270.0" layoutY="21.0" text="3" />
+                              <Label layoutX="319.0" layoutY="21.0" text="4" />
                            </children>
                         </HBox>
                         <VBox alignment="CENTER_LEFT" layoutX="421.0" layoutY="60.0" maxWidth="93.0" prefHeight="348.0" prefWidth="93.0" spacing="50.0">
                            <children>
-                              <Label text="0">
-                                 <font>
-                                    <Font name="System Bold" />
-                                 </font>
-                              </Label>
-                              <Label text="1">
-                                 <font>
-                                    <Font name="System Bold" />
-                                 </font>
-                              </Label>
-                              <Label text="2">
-                                 <font>
-                                    <Font name="System Bold" />
-                                 </font>
-                              </Label>
-                              <Label text="3">
-                                 <font>
-                                    <Font name="System Bold" />
-                                 </font>
-                              </Label>
-                              <Label text="4">
-                                 <font>
-                                    <Font name="System Bold" />
-                                 </font>
-                              </Label>
+                              <Label text="0" />
+                              <Label text="1" />
+                              <Label text="2" />
+                              <Label text="3" />
+                              <Label text="4" />
                            </children>
                         </VBox>
+                        <ImageView fitHeight="218.0" fitWidth="193.0" layoutX="461.0" layoutY="209.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../graphics/bgs/clp_bg.png" />
+                           </image>
+                        </ImageView>
+                        <Button fx:id="buttonMove" layoutX="480.0" layoutY="285.0" mnemonicParsing="false" styleClass="rightBoard" stylesheets="@../css/mainScene.css" text="Move" visible="false" />
+                        <Button fx:id="buttonBuild" layoutX="547.0" layoutY="285.0" mnemonicParsing="false" styleClass="rightBoard" stylesheets="@../css/mainScene.css" text="Build" visible="false" />
                      </children>
                   </AnchorPane>
                </center>
@@ -108,11 +74,7 @@
                      <children>
                         <VBox layoutY="50.0" prefHeight="393.0" prefWidth="100.0" AnchorPane.leftAnchor="40.0">
                            <children>
-                              <Label prefHeight="77.0" prefWidth="173.0" text="Player 1:">
-                                 <graphic>
-                                    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="20.0" stroke="BLACK" strokeType="INSIDE" width="20.0" />
-                                 </graphic>
-                              </Label>
+                              <Label fx:id="test" prefHeight="77.0" prefWidth="173.0" text="Player 1:" />
                               <Label prefHeight="73.0" prefWidth="170.0" text="Player 2:">
                                  <graphic>
                                     <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f80808" height="20.0" stroke="BLACK" strokeType="INSIDE" width="20.0" />
