--- a/src/main/resources/fxml/mainScene.fxml
+++ b/src/main/resources/fxml/mainScene.fxml
@@ -1,22 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.geometry.Rectangle2D?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Rectangle?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 
-<AnchorPane fx:id="mainAnchor" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.gui.controllers.MainGuiController">
+<AnchorPane fx:id="mainAnchor" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.gui.controllers.MainGuiController">
    <children>
       <StackPane>
          <children>
@@ -77,10 +67,10 @@
                                  </image>
                               </ImageView>
                               <Label fx:id="actionsLabel" alignment="CENTER" layoutX="18.0" layoutY="14.0" prefHeight="28.0" prefWidth="128.0" text="Labellllllllllllll" textAlignment="CENTER" visible="false" wrapText="true" AnchorPane.leftAnchor="18.0" AnchorPane.topAnchor="14.0" />
-                              <Button fx:id="buttonBuild" layoutX="14.0" layoutY="84.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="105.0" styleClass="rightBoard" stylesheets="@../css/mainScene.css" text="BUILD" translateX="15.0" visible="false" />
-                              <Button fx:id="buttonMove" layoutX="14.0" layoutY="48.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="105.0" styleClass="rightBoard" stylesheets="@../css/mainScene.css" text="MOVE" translateX="15.0" visible="false" />
-                              <Button fx:id="buttonCustom" layoutX="14.0" layoutY="119.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="105.0" styleClass="rightBoard" stylesheets="@../css/mainScene.css" text="UAUA" translateX="15.0" visible="false" />
-                              <Button fx:id="buttonEnd" layoutX="14.0" layoutY="154.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="105.0" styleClass="rightBoard" stylesheets="@../css/mainScene.css" text="END" textAlignment="CENTER" translateX="15.0" visible="false" />
+                              <Button fx:id="buttonBuild" layoutX="14.0" layoutY="84.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="105.0" styleClass="grayedOut" stylesheets="@../css/mainScene.css" text="BUILD" translateX="15.0" visible="true" />
+                              <Button fx:id="buttonMove" layoutX="14.0" layoutY="48.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="105.0" styleClass="grayedOut" stylesheets="@../css/mainScene.css" text="MOVE" translateX="15.0" visible="true" />
+                              <Button fx:id="buttonCustom" layoutX="14.0" layoutY="119.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="105.0" styleClass="grayedOut" stylesheets="@../css/mainScene.css" text="CUSTOMACTION" translateX="15.0" visible="true" />
+                              <Button fx:id="buttonEnd" layoutX="14.0" layoutY="154.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="105.0" styleClass="grayedOut" stylesheets="@../css/mainScene.css" text="END" textAlignment="CENTER" translateX="15.0" visible="true" />
                            </children>
                         </AnchorPane>
                      </children>
