--- a/src/main/resources/fxml/mainScene.fxml
+++ b/src/main/resources/fxml/mainScene.fxml
@@ -81,15 +81,18 @@
                      <children>
                         <VBox layoutY="50.0" prefHeight="393.0" prefWidth="100.0" AnchorPane.leftAnchor="40.0">
                            <children>
-                              <Label fx:id="test" prefHeight="77.0" prefWidth="173.0" text="Player 1:" />
-                              <Label prefHeight="73.0" prefWidth="170.0" text="Player 2:">
+                              <Label fx:id="player1" onMouseClicked="#getGod" prefHeight="77.0" prefWidth="173.0" text="Player 1" visible="false">
                                  <graphic>
-                                    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f80808" height="20.0" stroke="BLACK" strokeType="INSIDE" width="20.0" />
+                                    <Rectangle fx:id="rect1" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="20.0" stroke="BLACK" strokeType="INSIDE" width="20.0" />
+                                 </graphic></Label>
+                              <Label fx:id="player2" onMouseClicked="#getGod" prefHeight="73.0" prefWidth="170.0" text="Player 2:" visible="false">
+                                 <graphic>
+                                    <Rectangle fx:id="rect2" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="20.0" stroke="BLACK" strokeType="INSIDE" width="20.0" />
                                  </graphic>
                               </Label>
-                              <Label prefHeight="79.0" prefWidth="173.0" text="Player 3:">
+                              <Label fx:id="player3" onMouseClicked="#getGod" prefHeight="79.0" prefWidth="173.0" text="Player 3:" visible="false">
                                  <graphic>
-                                    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#18b52b" height="20.0" stroke="BLACK" strokeType="INSIDE" width="20.0" />
+                                    <Rectangle fx:id="rect3" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="20.0" stroke="BLACK" strokeType="INSIDE" width="20.0" />
                                  </graphic>
                               </Label>
                            </children>
