--- a/src/main/resources/fxml/mainScene.fxml
+++ b/src/main/resources/fxml/mainScene.fxml
@@ -1,20 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="mainAnchor" prefHeight="540.0" prefWidth="960.0" styleClass="background" stylesheets="@../css/mainScene.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.gui.controllers.MainGuiController">
+<AnchorPane fx:id="mainAnchor" prefHeight="540.0" prefWidth="960.0" styleClass="background" stylesheets="@../css/mainScene.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.gui.controllers.MainGuiController">
    <children>
       <HBox prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -185,12 +178,12 @@
                               <Insets bottom="7.0" left="20.0" />
                            </VBox.margin>
                         </Button>
-                        <Button fx:id="buttonCustom" mnemonicParsing="false" prefHeight="35.0" prefWidth="143.0" styleClass="grayedOut" stylesheets="@../css/mainScene.css" text="CUSTOMACTION" visible="true" VBox.vgrow="ALWAYS">
+                        <Button fx:id="buttonBuild" mnemonicParsing="false" prefHeight="35.0" prefWidth="143.0" styleClass="grayedOut" stylesheets="@../css/mainScene.css" text="BUILD" visible="true" VBox.vgrow="ALWAYS">
                            <VBox.margin>
                               <Insets bottom="7.0" left="20.0" />
                            </VBox.margin>
                         </Button>
-                        <Button fx:id="buttonBuild" mnemonicParsing="false" prefHeight="35.0" prefWidth="143.0" styleClass="grayedOut" stylesheets="@../css/mainScene.css" text="BUILD" visible="true" VBox.vgrow="ALWAYS">
+                        <Button fx:id="buttonCustom" mnemonicParsing="false" prefHeight="35.0" prefWidth="143.0" styleClass="grayedOut" stylesheets="@../css/mainScene.css" text="CUSTOMACTION" visible="true" VBox.vgrow="ALWAYS">
                            <VBox.margin>
                               <Insets bottom="7.0" left="20.0" />
                            </VBox.margin>
