added media player

--- a/src/main/resources/css/godScreen.css
+++ b/src/main/resources/css/godScreen.css
@@ -1,5 +1,5 @@
 .mainPanel {
-    -fx-background-image: url("../graphics/bgs/odyssey_3.png");
+    -fx-background-image: url("../graphics/bgs/Odyssey_UI_Backdrop.png");
     -fx-background-size: stretch;
 }
 
