--- a/src/main/resources/css/mainMenu.css
+++ b/src/main/resources/css/mainMenu.css
@@ -8,7 +8,7 @@
 	-fx-background-size: stretch;
 	-fx-background-color: transparent;
 	-fx-font-family: "Dalek Pinpoint";
-	-fx-font-size: 50;
+	-fx-font-size: 50px;
 }
 
 .actionButton:hover {
@@ -24,7 +24,7 @@
 	-fx-background-size: stretch;
 	-fx-background-color: transparent;
 	-fx-font-family: "Dalek Pinpoint";
-	-fx-font-size: 30;
+	-fx-font-size: 30px;
 }
 
 .inputLabels {
