--- a/src/main/resources/fxml/MainMenu.fxml
+++ b/src/main/resources/fxml/MainMenu.fxml
@@ -6,81 +6,40 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="mainPanel" stylesheets="@../css/mainMenu.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.gui.controllers.MainMenuController">
-   <top>
-      <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <top>
-            <MenuBar BorderPane.alignment="CENTER">
-              <menus>
-                <Menu mnemonicParsing="false" text="File">
-                  <items>
-                    <MenuItem mnemonicParsing="false" onAction="#quit" text="Close" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Edit">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Delete" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Help">
-                  <items>
-                    <MenuItem mnemonicParsing="false" onAction="#about" text="About" />
-                  </items>
-                </Menu>
-              </menus>
-            </MenuBar>
-         </top>
-         <center>
-            <ImageView fitHeight="159.0" fitWidth="577.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
-               <image>
-                  <Image url="@../graphics/santorini-logo.png" />
-               </image>
-            </ImageView>
-         </center>
-      </BorderPane>
-   </top>
-   <right>
-      <GridPane alignment="TOP_CENTER" prefHeight="447.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
-        <columnConstraints>
-          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Button mnemonicParsing="false" onAction="#quit" prefHeight="149.0" prefWidth="273.0" styleClass="actionButton" stylesheets="@../css/mainMenu.css" text="QUIT" textFill="WHITE" GridPane.rowIndex="1">
-               <font>
-                  <Font name="Britannic Bold" size="36.0" />
-               </font></Button>
-            <Button fx:id="setupGame" mnemonicParsing="false" onMouseClicked="#play" prefHeight="145.0" prefWidth="274.0" styleClass="actionButton" stylesheets="@../css/mainMenu.css" text="PLAY" textFill="WHITE">
-               <font>
-                  <Font name="Britannic Bold" size="36.0" />
-               </font></Button>
-         </children>
-      </GridPane>
-   </right>
-   <bottom>
-      <Pane prefHeight="61.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
-         <children>
-            <ImageView fitHeight="38.0" fitWidth="157.0" layoutX="14.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../graphics/copyright/roxley_splash.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="music" fitHeight="36.0" fitWidth="28.0" layoutX="1238.0" layoutY="20.0" onMouseClicked="#mute" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../graphics/icons/speaker.png" />
-               </image></ImageView>
-            <Label layoutX="459.0" layoutY="22.0" prefWidth="363.0" text="Alice Piemonti, Luca Pirovano, Nicolò Sonnino" textFill="WHITE">
-               <font>
-                  <Font name="Britannic Bold" size="16.0" />
-               </font>
-               <effect>
-                  <DropShadow />
-               </effect>
-            </Label>
-         </children>
-      </Pane>
-   </bottom>
-</BorderPane>
+<AnchorPane fx:id="mainPane" prefHeight="540.0" prefWidth="960.0" styleClass="mainPanel" stylesheets="@../css/mainMenu.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.gui.controllers.MainMenuController">
+   <children>
+      <ImageView fx:id="title" fitHeight="139.0" fitWidth="391.0" layoutX="285.0" layoutY="8.0" pickOnBounds="true">
+         <image>
+            <Image url="@../graphics/santorini-logo.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="setupGame" layoutX="390.0" layoutY="180.0" mnemonicParsing="false" onMouseClicked="#play" styleClass="actionButton" stylesheets="@../css/mainMenu.css" text="PLAY" textFill="WHITE">
+         <font>
+            <Font name="Britannic Bold" size="36.0" />
+         </font>
+      </Button>
+      <Button fx:id="quitGame" layoutX="390.0" layoutY="327.0" mnemonicParsing="false" onAction="#quit" styleClass="actionButton" stylesheets="@../css/mainMenu.css" text="QUIT" textFill="WHITE">
+         <font>
+            <Font name="Britannic Bold" size="36.0" />
+         </font>
+      </Button>
+      <ImageView fx:id="roxleyIcon" fitHeight="38.0" fitWidth="312.0" layoutY="499.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../graphics/copyright/roxley_splash.png" />
+         </image>
+      </ImageView>
+      <Label fx:id="credits" alignment="CENTER" layoutX="124.0" layoutY="506.0" prefHeight="20.0" prefWidth="778.0" text="Alice Piemonti, Luca Pirovano, Nicolò Sonnino" textFill="WHITE">
+         <font>
+            <Font name="Britannic Bold" size="16.0" />
+         </font>
+         <effect>
+            <DropShadow />
+         </effect>
+      </Label>
+      <ImageView fx:id="music" fitHeight="36.0" fitWidth="28.0" layoutX="918.0" layoutY="504.0" onMouseClicked="#mute" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../graphics/icons/speaker.png" />
+         </image>
+      </ImageView>
+   </children>
+</AnchorPane>
