QoL fixes and features

--- a/src/main/resources/css/mainScene.css
+++ b/src/main/resources/css/mainScene.css
@@ -44,3 +44,7 @@
     -fx-font-size: 15;
     -fx-text-fill: black;
 }
+.gridpane {
+    -fx-background-image: url("../graphics/bgs/gridPane.png");
+    -fx-background-size: stretch;
+}
